--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 
                 <div class="col-md-6 col-sm-12">
                     <div class="home-video">
-                        <div class="embed-responsive embed-responsive-OhyCg">
-                            <iframe src="https://youtu.be/4AdnSgOhyCg" frameborder="0" allowfullscreen></iframe>
+                        <div class="embed-responsive embed-responsive-16by9">
+                          <iframe src="https://www.youtube.com/embed/F9GujgK0y2M" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
