--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
                                 <small><i class="fa fa-clock-o"></i> March 28, 2018</small>
-                                <h3><a href="#">How to host your code on github</a></h3>
+                                <h3><a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e">How to host your code on github</a></h3>
                                 <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
-                                <a href="#" class="btn section-btn">Read article</a>
+                                <a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e" class="btn section-btn">Read article</a>
                             </div>
                         </div>
                     </div>
@@ -375,9 +375,9 @@
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
                                 <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
-                                <h3><a href="#">Introduction to Bootstrap</a></h3>
+                                <h3><a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7">Introduction to Bootstrap</a></h3>
                                 <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
-                                <a href="#" class="btn section-btn">Read article</a>
+                                <a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7" class="btn section-btn">Read article</a>
                             </div>
                         </div>
                     </div>
@@ -387,9 +387,9 @@
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
                                 <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
-                                <h3><a href="#">The new features of HTML 5.2</a></h3>
+                                <h3><a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72">The new features of HTML 5.2</a></h3>
                                 <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
-                                <a href="#" class="btn section-btn">Read Article</a>
+                                <a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72" class="btn section-btn">Read Article</a>
                             </div>
                         </div>
                     </div>
