--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
                                 <small><i class="fa fa-clock-o"></i> August, 2018</small>
-                                <h3><a href="#">The A-Z of programming for newbies</a></h3>
+                                <h3><a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc">The A-Z of programming for newbies</a></h3>
                                 <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
-                                <a href="#" class="btn section-btn">Read article</a>
+                                <a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc" class="btn section-btn">Read article</a>
                             </div>
                         </div>
                     </div>
