--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                         <!-- BLOG THUMB -->
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
-                                <small><i class="fa fa-clock-o"></i> August, 2018</small>
+                                <small><i class="fa fa-clock-o"></i> August 5, 2018</small>
                                 <h3><a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc">The A-Z of programming for newbies</a></h3>
                                 <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
                                 <a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc" class="btn section-btn">Read article</a>
