--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     
                     <div class="col-md-12 col-sm-12">
                         <div class="section-title">
-                            <h2>My Articles</h2>
+                            <h2>My Recent Articles</h2>
                             <span class="line-bar">...</span>
                         </div>
                     </div>
