--- a/resume.html
+++ b/resume.html
@@ -14,17 +14,17 @@
     <title>Resume - Bolaji Ayodeji</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="resume/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
-    <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+    <link href="resume/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="resume/vendor/devicons/css/devicons.min.css" rel="stylesheet">
+    <link href="resume/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
     <!-- Main Stylesheet -->
-    <link href="css/resume.min.css" rel="stylesheet">
+    <link href="resume/css/resume.min.css" rel="stylesheet">
 
 </head>
 
@@ -391,14 +391,14 @@
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="resume/vendor/jquery/jquery.min.js"></script>
+    <script src="resume/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <script src="resume/vendor/jquery-easing/jquery.easing.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/resume.min.js"></script>
+    <script src="resume/js/resume.min.js"></script>
 
 </body>
 
