--- a/resume.html
+++ b/resume.html
@@ -9,16 +9,14 @@
     <meta name="author" content="Bolaji Ayodeji">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="resume/img/favicon.ico">
 
     <title>Resume - Bolaji Ayodeji</title>
 
     <!-- Bootstrap core CSS -->
     <link href="resume/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <!-- Custom fonts for -->
     <link href="resume/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="resume/vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="resume/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
@@ -36,7 +34,7 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Bolaji Ayodeji - The Geek</span>
             <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="resume/img/profile.jpg" alt="">
         </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,7 +66,9 @@
 
     <!--Main Content -->
     <div>
-        <p><a href="https://bolajiayodeji.github.io"><i class="fa fa-arrow-left"></i>Go Back Home</a></p>
+        <p>
+            <a href="https://bolajiayodeji.github.io">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
+        </p>
     </div>
     <div class="container-fluid p-0">
 
