--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <p>Hello there! I'm Bolaji Ayodeji.</p>
                         <p>Tech Geek, Front-end Developer, Photographer <br /> Content Writer, Digital Marketer, Favcoder.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
-                        <a class="section-btn" href="resume/resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
+                        <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
 
