--- a/resume.html
+++ b/resume.html
@@ -385,9 +385,7 @@
 
     <!--Footer Section-->
     <footer class="text-center">
-        <p> Developed with <i class="fa fa-heart text-danger"></i> &amp; <i class="fa fa-coffee text-secondary"></i> by <a href="https://bolajiayodeji.github.io">Bolaji Ayodeji</a>
-            <br /> cc: <a href="https:favcode54.org">FAVCODE54</a> Rapid Web Class - July 2018
-        </p>
+        <p> <i class="fa fa-code"></i> with <i class="fa fa-heart text-danger"></i> &amp; <i class="fa fa-coffee text-secondary"></i> by <a href="https://bolajiayodeji.github.io">Bolaji Ayodeji</a></p>
     </footer>
 
     <!-- Bootstrap core JavaScript -->
