--- a/resume.html
+++ b/resume.html
@@ -370,11 +370,11 @@
                 <h2 class="mb-5">Awards &amp; Certifications</h2>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <i class="fa-li fa fa-trophy text-warning"></i> Favcode54 certified git & github Developer</li>
+                    <li>
                         <i class="fa-li fa fa-trophy text-warning"></i> Favcode54 certified Wordpress Developer</li>
                     <li>
                         <i class="fa-li fa fa-trophy text-warning"></i> Favcode54 certified Web Developer</li>
-                    <li>
-                        <i class="fa-li fa fa-trophy text-warning"></i> Sololearn Certified Frontend Developer</li>
 
                 </ul>
             </div>
