--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@
     <br />
     <div>
         <p>
-            <a href="https://bolajiayodeji.github.io">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
+            <a href="index.html">&nbsp;<i class="fa fa-arrow-left"></i>Go Back Home</a>
         </p>
     </div>
     <div class="container-fluid p-0">
@@ -81,7 +81,7 @@
                 <div class="subheading mb-5">Lokoja, Kogi State, Nigeria | <a href=""><i class="fa fa-phone"></i> (+234) 8109445504</a> |
                     <a href="mailto:Sirbeejay1@gmail.com"><i class="fa fa-envelope"></i> Sirbeejay1@gmail.com</a>
                 </div>
-                <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Article Writer.</p>
+                <p class="mb-5 caption">I'm a Tech Geek, Front-end Developer, Favcoder, Photographer &amp; Content Writer.</p>
                 <ul class="list-inline list-social-icons mb-0">
                     <li class="list-inline-item">
                         <a href="https://facebook.com/ayodeji.beejay">
@@ -159,9 +159,8 @@
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Student Ambassador</h3>
                         <div class="subheading mb-3">Favcode54</div>
-                        <p>Reprsenting Favcode54 in my community (Kogi State Region)
-                            <br /> Spreading the fire of tech thereby contributing to the African Tech Ecosystem
-                            <br /> Organizing meet-ups, hackathons... backed by <a href="https://favcode54.org">Favcode54</a>
+                        <p>Spreading the fire of tech thereby contributing to the African Tech Ecosystem
+                            <br /> Organizing meet-ups, hackathons backed by <a href="https://favcode54.org">Favcode54</a>
                             <br /> Favcode54 Envangelism
                         </p>
                     </div>
@@ -200,7 +199,7 @@
 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Intern</h3>
+                        <h3 class="mb-0">Intern (Stage 4)</h3>
                         <div class="subheading mb-3">Hotels.ng Internship 4.0</div>
                         <p>The biggest remote software developer internship in Nigeria.
                             <br /> Built frontend of web apps and deployed to PHP database
@@ -335,6 +334,9 @@
                     <li class="list-inline-item">
                         <i class="devicons devicons-mysql"></i>
                     </li>
+                    <li class="list-inline-item">
+                            <i class="devicons devicons-github"></i>
+                        </li>
                 </ul>
 
                 <br />
@@ -351,8 +353,9 @@
                     <li>
                         <i class="fa-li fa fa-check"></i> Content Management &amp; Security</li>
                     <li>
-                        <i class="fa-li fa fa-check"></i> Search Engine Optimization &amp; Marketing</li>
-
+                        <i class="fa-li fa fa-check"></i> Search Engine Optimization</li>
+                        <li>
+                                <i class="fa-li fa fa-check"></i> Digital Marketing</li>
                 </ul>
             </div>
         </section>
@@ -360,8 +363,8 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
             <div class="my-auto">
                 <h2 class="mb-5">Interests</h2>
-                <p>Apart from being a web developer, I enjoy most of my time surfing the internet, reading, travelling, singing, playing musical instruments <br /> (Acoustic Guitar, Piano), playing chess, photography.</p>
-                <p class="mb-0">I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the world.
+                <p>Apart from being a web developer, I enjoy most of my time surfing the internet, reading, travelling, singing, playing musical instruments <br /> (Acoustic Guitar, Piano), playing chess and photography.</p>
+                <p class="mb-0">I follow a number of sci-fi and fantasy genre movies and television shows, iam a big fan of The Silicon Valley and I spend a large amount of my free time exploring the latest technolgy advancements in the world.
                 </p>
             </div>
         </section>
