--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
         </div>
     </section>
-
+<hr />
 
     <!-- SERVICES -->
     <section id="service" data-stellar-background-ratio="0.5">
@@ -216,13 +216,10 @@
                 <div class="col-md-6 col-sm-6">
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image1.png" class="img-responsive" alt="">
-                        </div>
                         <div class="media-body blog-info">
-                            <h3>Web Design</h3>
-                            <p>Responsive website design with great focus on optimization, speed & security.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
+                                <img src="images/blog-image1.png" class="img-responsive" alt="">
+                            <h3>Web Design</a></h3>
+                            <p>Responsive website development with great focus on user experience, optimization, speed & security.</p>
                         </div>
                     </div>
                 </div>
@@ -230,13 +227,10 @@
                 <div class="col-md-6 col-sm-6">
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image2.png" class="img-responsive" alt="">
-                        </div>
                         <div class="media-body blog-info">
-                            <h3>UI/UX Design</h3>
+                            <img src="images/blog-image2.png" class="img-responsive" alt=""></a>
+                            <h3>UI/UX Design</a></h3>
                             <p>Professional yet creative design interface for product branding that reflects your company’s spirit and leaves a lasting, memorable effect.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -244,13 +238,10 @@
                 <div class="col-md-6 col-sm-6">
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image3.png" class="img-responsive" alt="">
-                        </div>
                         <div class="media-body blog-info">
-                            <h3>Wordpress CMS</h3>
+                                <img src="images/blog-image3.png" class="img-responsive" alt=""></a>
+                            <h3>Wordpress CMS</a></h3>
                             <p>Wordpress CMS is a user-friendly administrative area allowing you to easily edit & manage your website's content.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
                         </div>
                     </div>
                 </div>
@@ -258,84 +249,64 @@
                 <div class="col-md-6 col-sm-6">
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image4.png" class="img-responsive" alt="">
-                        </div>
                         <div class="media-body blog-info">
-                            <h3>Bot Development</h3>
-                            <p>Chat Bots development for easy, fast & digital user communication.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
+                                <img src="images/blog-image4.png" class="img-responsive" alt=""></a>
+                            <h3>Bot Development</a></h3>
+                            <p>Chat Bots development for easy, fast & digital customer communication.</p>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-md-6 col-sm-6">
-                    <!-- BLOG THUMB -->
-                    <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image5.png" class="img-responsive" alt="">
-                        </div>
-                        <div class="media-body blog-info">
-                            <h3>Content Writing</h3>
-                            <p>Content write ups for product documentation, promotion and blogs.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
+                        <!-- BLOG THUMB -->
+                        <div class="media blog-thumb">
+                            <div class="media-body blog-info">
+                                    <img src="images/blog-image5.png" class="img-responsive" alt=""></a>
+                                <h3>Content Writing</a></h3>
+                                <p>Content write ups for product documentation, promotion & blogs.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-
-                <div class="col-md-6 col-sm-6">
-                    <!-- BLOG THUMB -->
-                    <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image6.png" class="img-responsive" alt="">
+                    
+                    <div class="col-md-6 col-sm-6">
+                            <!-- BLOG THUMB -->
+                            <div class="media blog-thumb">
+                                <div class="media-body blog-info">
+                                        <img src="images/blog-image6.png" class="img-responsive" alt=""></a>
+                                    <h3>Photography</a></h3>
+                                    <p>All types of classic photography can be created for your website. </p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="media-body blog-info">
-                            <h3>Photography</h3>
-                            <p>All types of photography can be created for your website <br />(Indoor & Outdoor Shots).</p>
-                            <a href="#" class="btn section-btn">Read more</a>
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-md-6 col-sm-6">
-                    <!-- BLOG THUMB -->
-                    <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image7.png" class="img-responsive" alt="">
-                        </div>
-                        <div class="media-body blog-info">
-                            <h3>Digital Marketing</h3>
-                            <p>Product/Brand awareness via several social medias leading to customers acqusition.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
-                        </div>
-                    </div>
-                </div>
+                        <div class="col-md-6 col-sm-6">
+                                <!-- BLOG THUMB -->
+                                <div class="media blog-thumb">
+                                    <div class="media-body blog-info">
+                                            <img src="images/blog-image7.png" class="img-responsive" alt=""></a>
+                                        <h3>Digital Marketing</a></h3>
+                                        <p>Product/Brand promotion via several social media platforms leading to customers acqusition.</p>
+                                    </div>
+                                </div>
+                            </div>
 
-                <div class="col-md-6 col-sm-6">
-                    <!-- BLOG THUMB -->
-                    <div class="media blog-thumb">
-                        <div class="media-object media-left">
-                            <img src="images/blog-image8.png" class="img-responsive" alt="">
-                        </div>
-                        <div class="media-body blog-info">
-                            <h3>Search Engine Optimization</h3>
-                            <p>Improvment and promotion of websites presence in order to increase the number of visitors (Traffic) it receives.</p>
-                            <a href="#" class="btn section-btn">Read more</a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
+                            <div class="col-md-6 col-sm-6">
+                                    <!-- BLOG THUMB -->
+                                    <div class="media blog-thumb">
+                                        <div class="media-body blog-info">
+                                                <img src="images/blog-image8.png" class="img-responsive" alt=""></a>
+                                            <h3>Search Engine Optimization</a></h3>
+                                            <p>Improvment and promotion of websites search presence leading to increased number of visitors (Traffic).</p>
+                                        </div>
+                                    </div>
+                                </div>
             </div>
         </div>
     </section>
-
+<hr />
 
     <!--BLOG SECTION-->
-    <section id="service" data-stellar-background-ratio="0.5">
+    <section id="articles" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row">
 
@@ -352,7 +323,7 @@
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> August 5, 2018</small>
                             <h3><a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc">The A-Z of programming for newbies</a></h3>
-                            <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
+                            <p>List of useful programming terms from A to Z.</p>
                             <a href="https://medium.com/@bolajiayodeji/the-a-z-of-programming-a55bf8dc08bc" class="btn section-btn">Read article</a>
                         </div>
                     </div>
@@ -364,7 +335,7 @@
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> March 28, 2018</small>
                             <h3><a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e">How to host your code on github</a></h3>
-                            <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
+                            <p>Using github as a hosting platform from Github Desktop App.</p>
                             <a href="https://medium.com/@bolajiayodeji/how-to-host-your-code-on-github-a409e906c72e" class="btn section-btn">Read article</a>
                         </div>
                     </div>
@@ -376,7 +347,7 @@
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
                             <h3><a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7">Introduction to Bootstrap</a></h3>
-                            <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
+                            <p>Quick tutorial on bootstrap framework, Introduction and how to use.</p>
                             <a href="https://medium.com/@bolajiayodeji/introduction-to-bootstrap-b23da90eada7" class="btn section-btn">Read article</a>
                         </div>
                     </div>
@@ -388,16 +359,24 @@
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
                             <h3><a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72">The new features of HTML 5.2</a></h3>
-                            <p>Lorem ipsum dolor sit consectetur adipiscing morbi venenatis.</p>
+                            <p>The newly released HTML 5.2, changes and new features.</p>
                             <a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72" class="btn section-btn">Read Article</a>
                         </div>
                     </div>
                 </div>
 
+                <br /><br /><br /><br />
+                <div class="col-md-12">
+                    <h2> <i class="fa fa-arrow-right"></i>Read all my articles
+                     <a href="https://medium.com/@bolajiayodeji" class="link-btn">Click Here <i class="fa fa-medium"></i></a>
+                    </h2>
+                </div>
+
+            </div>
             </div>
         </div>
     </section>
-
+<hr />
 
     <!-- WORK -->
     <section id="portfolio" data-stellar-background-ratio="0.5">
@@ -467,6 +446,12 @@
                     </div>
                 </div>
 
+                <br /><br /><br /><br />
+                <div class="col-md-12">
+                    <h2> <i class="fa fa-arrow-right"></i>View my other projects on github
+                        <a href="https://github.com/bolajiayodeji?tab=repositories/" class="link-btn">Click Here <i class="fa fa-github"></i></a>
+                        </h2>
+                </div>
             </div>
         </div>
     </section>
@@ -496,7 +481,7 @@
                         </div>
 
                         <div class="col-md-6 col-sm-6">
-                            <input type="tel" class="form-control" placeholder="Your Phone" id="cf-number" name="cf-number" required="">
+                            <input type="tel" class="form-control " placeholder="Your Phone" id="cf-number" name="cf-number" required="">
                         </div>
 
                         <div class="col-md-12 col-sm-12">
@@ -504,10 +489,10 @@
                         </div>
 
                         <div class="col-md-4 col-sm-6">
-                            <input type="submit" class="form-control" name="submit" value="Send Message">
+                            <input type="submit" class="form-control" name="submit" value="SEND MESSAGE">
                         </div>
-                        <div class="col-md-4 col-sm-6">
-                            <input type="submit" class="form-control" name="reset" value="Clear">
+                        <div class="col-md-2 col-sm-4">
+                            <input type="reset" class="form-control" name="reset" value="CLEAR">
                         </div>
 
                     </form>
@@ -546,7 +531,8 @@
                         <ul class="footer-link">
                             <li><a href="#home" class="smoothScroll">Home</a></li>
                             <li><a href="#about" class="smoothScroll">About me</a></li>
-                            <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
+                            <li><a href="#articles" class="smoothScroll">Recent Articles</a></li>
+                            <li><a href="#portfolio" class="smoothScroll">Recent Projects</a></li>
                             <li><a href="#contact" class="smoothScroll">Contact</a></li>
                             <li><a href="#" class="smoothScroll">Blog</a></li>
                         </ul>
@@ -557,11 +543,11 @@
                     <div class="footer-thumb">
                         <h2>Services</h2>
                         <ul class="footer-link">
-                            <p><i class="fa fa-star"></i> Web Design</p>
-                            <p><i class="fa fa-star"></i> UI/UX Design</p>
-                            <p><i class="fa fa-star"></i> Content Writing</p>
-                            <p><i class="fa fa-star"></i> Digital Marketing</p>
-                            <p><i class="fa fa-star"></i> Photographty</p>
+                            <p> Web Design </p>
+                            <p> UI/UX Design </p>
+                            <p> Content Writing </p>
+                            <p> Digital Marketing </p>
+                            <p> Photographty </p>
                         </ul>
                     </div>
                 </div>
@@ -571,7 +557,7 @@
                         <h2>Find me</h2>
                         <p><i class="fa fa-map-marker"></i> Behind Commisioners Quarters, <br> Lokoja, Kogi State, Nigeria.</p>
                         <br />
-                        <p><i class="fa fa-map-marker"></i> Department of computer science, Federal University Lokoja, Kogi State.</p>
+                        <p><i class="fa fa-map-marker"></i> Department Of Computer Science, Federal University Lokoja, Kogi State.</p>
                     </div>
                 </div>
 
