--- a/index.html
+++ b/index.html
@@ -115,11 +115,9 @@
                 <!--COLUMN ONE-->
                 <div class="col-md-6 col-sm-12">
                     <div class="home-video">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/F9GujgK0y2M" frameborder="0" allowfullscreen></iframe>
+                        <img class="img responsive" src="images/DevImage.jpg"></img>
                         </div>
                     </div>
-                </div>
 
                 <!--COLUMN TWO-->
                 <div class="col-md-6 col-sm-12">
