--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                 <!--COLUMN ONE-->
                 <div class="col-md-6 col-sm-12">
                     <div class="home-video">
-                        <img class="img responsive" src="images/DevImage.jpg"></img>
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe src="https://www.youtube.com/embed/F9GujgK0y2M" frameborder="0" allowfullscreen></iframe>
                         </div>
+                    </div>
                     </div>
 
                 <!--COLUMN TWO-->
