--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             <span class="line-bar">...</span>
                         </div>
                         <p>Hello there! I'm Bolaji Ayodeji.</p>
-                        <p>Tech Geek, Front-end Developer, Photographer <br /> Content Writer, Digital Marketer, Favcoder.</p>
+                        <p>I build and deploy softwares <br /> with great focus on stunning interface design, optimization and security.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
                         <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
                     </div>
