--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en-US" />
 
 <head>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123719673-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-123719673-1');
+</script>
+
 
     <title>Bolaji Ayodeji - The Geek</title>
 
