--- a/index.html
+++ b/index.html
@@ -374,12 +374,15 @@
                         </div>
                     </div>
                 </div>
-
-                <br /><br /><br /><br />
-                <div class="col-md-12">
-                    <h2> <i class="fa fa-arrow-right"></i>Read all my articles
-                     <a href="https://medium.com/@bolajiayodeji" class="link-btn">Click Here <i class="fa fa-medium"></i></a>
-                    </h2>
+                <div class="container">
+                    <div class="row">
+                <div class="col-md-6">
+                    <h2> <i class="fa fa-arrow-right"></i>Read all my articles </h2>
+                </div>
+                <div class="col-md-6">
+                     <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here <i class="fa fa-medium"></i></a>
+                </div>
+                    </div>
                 </div>
 
             </div>
