--- a/index.html
+++ b/index.html
@@ -378,7 +378,9 @@
                     <div class="row">
                 <div class="col-md-6">
                     <h2> <i class="fa fa-arrow-right"></i>Read all my articles </h2>
-                     <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here <i class="fa fa-medium"></i></a>
+                     <h2>
+                         <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here <i class="fa fa-medium"></i></a>
+                    </h2>
                 </div>
                     </div>
                 </div>
@@ -456,12 +458,13 @@
                         </a>
                     </div>
                 </div>
-
-                <br /><br /><br /><br />
-                <div class="col-md-12">
-                    <h2> <i class="fa fa-arrow-right"></i>View my other projects on github
-                        <a href="https://github.com/bolajiayodeji?tab=repositories/" class="link-btn">Click Here <i class="fa fa-github"></i></a>
-                        </h2>
+<div class="container">
+    <div class"row">
+                <div class="col-md-6">
+                    <h2> <i class="fa fa-arrow-right"></i>View my other projects on github </h2>
+                        <h2>
+                            <a href="https://github.com/bolajiayodeji?tab=repositories/" class="link-btn">Click Here <i class="fa fa-github"></i></a>
+                    </h2>
                 </div>
             </div>
         </div>
