--- a/index.html
+++ b/index.html
@@ -469,8 +469,19 @@
             </div>
         </div>
     </section>
-            
-            <section id="carousel">    				
+   <hr />
+
+    <!-- TESTIMONIAL-->
+    <section id="testimonial" data-stellar-background-ratio="0.5">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-12 col-sm-12">
+                    <div class="section-title">
+                        <h2>My Testimonials</h2>
+                        <span class="line-bar">...</span>
+                    </div>
+                </div>            				
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
@@ -528,6 +539,8 @@
 			</div>							
 		</div>
 	</div>
+		</div>
+	    </div>
 </section>
 
     <!-- CONTACT -->
