--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                 </div>
                 <div class="container">
                     <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-12">
                     <h2> <i class="fa fa-arrow-right"></i>Read all my articles </h2>
                      <h2>
                          <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here <i class="fa fa-medium"></i></a>
@@ -460,7 +460,7 @@
                 </div>
 <div class="container">
     <div class"row">
-                <div class="col-md-6">
+                <div class="col-lg-12">
                     <h2> <i class="fa fa-arrow-right"></i>View my other projects on github </h2>
                         <h2>
                             <a href="https://github.com/bolajiayodeji?tab=repositories/" class="link-btn">Click Here <i class="fa fa-github"></i></a>
