--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About me</a></li>
+                    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About me</a>
+	        <ul>
+		    <li><a href="mission" class="smoothScroll"> Mission</a></li>
+	        </ul>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact</a></li>
