--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <span class="line-bar">...</span>
                         </div>
                         <p>Hello there! I'm Bolaji Ayodeji.</p>
-                        <p>I build and deploy softwares with great focus on stunning interface design, optimization and security.</p>
+                        <p>I build and deploy software applications with great focus on stunning interface design, optimization and security.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
                         <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
                     </div>
