--- a/index.html
+++ b/index.html
@@ -102,7 +102,14 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About me</a></li>
+		    <li class="dropdown">
+			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
+			  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+	            <li><a href="#">Something else here</a></li>
+              </ul>                
+                    </li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact</a></li>
