--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
 		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
-			  <ul class="dropdown-menu" role="menu">
+			  <ul style="color:#000000;" class="dropdown-menu" role="menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
 	            <li><a href="#">Something else here</a></li>
