--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
-		    <li class="dropdown drop-list">
+		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
-			  <ul class="dropdown-menu" role="menu">
+			  <ul class="dropdown-menu drop-list" role="menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
 	            <li><a href="#">Something else here</a></li>
