--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
 		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
-			  <ul class="dropdown-menu drop-list" role="menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-	            <li><a href="#">Something else here</a></li>
+			  <ul class="dropdown-menu" role="menu">
+                    <li class="drop-list"><a href="#">Action</a></li>
+                    <li class="drop-list"><a href="#">Another action</a></li>
+	            <li class="drop-list"><a href="#">Something else here</a></li>
               </ul>                
                     </li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
