--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
 			  <ul class="dropdown-menu" role="menu">
-                    <li style="color:#000000;"><a href="#">Action</a></li>
-                    <li style="color:#000000;"><a href="#">Another action</a></li>
-	            <li style="color:#000000;"><a href="#">Something else here</a></li>
+                    <li><a style="color:#000000;" href="#">Action</a></li>
+                    <li><a style="color:#000000;" href="#">Another action</a></li>
+	            <li><a style="color:#000000;" href="#">Something else here</a></li>
               </ul>                
                     </li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
