--- a/index.html
+++ b/index.html
@@ -105,13 +105,23 @@
 		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
 			  <ul class="dropdown-menu" role="menu">
-                    <li><a style="color:#000000;" href="#">Action</a></li>
-                    <li><a style="color:#000000;" href="#">Another action</a></li>
-	            <li><a style="color:#000000;" href="#">Something else here</a></li>
+                    <li><a style="color:#000000;" href="#about">Quick Bio</a></li>
+                    <li><a style="color:#000000;" href="resume.html">Resume</a></li>
+	            <li><a style="color:#000000;" href="#articles">Recent Articles</a></li>
+		    <li><a style="color:#000000;" href="gallery.html">Gallery</a></li>
+		    <li><a style="color:#000000;" href="#">Social Media</a></li>
               </ul>                
                     </li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
-                    <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
+                    <li class="dropdown">
+			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-code"></i> Portfolio<span class="caret"></span></a>				
+			  <ul class="dropdown-menu" role="menu">
+                    <li><a style="color:#000000;" href="#projects">Recent Projects</a></li>
+                    <li><a style="color:#000000;" href="#testimonials">Testimonials</a></li>
+		    <li><a style="color:#000000;" href="https://github.com/bolajiayodeji">Github</a></li>
+		    <li><a style="color:#000000;" href="https://codepen.io/iambeejayayo">Codepen</a></li>
+              </ul>                
+                    </li>
                     <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact</a></li>
                 </ul>
 
