--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		    <li class="dropdown">
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
 			  <ul class="dropdown-menu" role="menu">
-                    <li><a style="color:#000000;" href="#about">Quick Bio</a></li>
+                    <li><a style="color:#000000; hover:#FA8072;" href="#about">Quick Bio</a></li>
                     <li><a style="color:#000000;" href="resume.html">Resume</a></li>
 	            <li><a style="color:#000000;" href="#articles">Recent Articles</a></li>
 		    <li><a style="color:#000000;" href="gallery.html">Gallery</a></li>
@@ -117,7 +117,7 @@
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-code"></i> Portfolio<span class="caret"></span></a>				
 			  <ul class="dropdown-menu" role="menu">
                     <li><a style="color:#000000;" href="#projects">Recent Projects</a></li>
-                    <li><a style="color:#000000;" href="#testimonials">Testimonials</a></li>
+                    <li><a style="color:#000000;" href="#testimonial">Testimonials</a></li>
 		    <li><a style="color:#000000;" href="https://github.com/bolajiayodeji">Github</a></li>
 		    <li><a style="color:#000000;" href="https://codepen.io/iambeejayayo">Codepen</a></li>
               </ul>                
