--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
 			  <ul class="dropdown-menu" role="menu">
                     <li><a class="drop-list" href="#about">Quick Bio</a></li>
-                    <li><a style="color:#000000;" href="resume.html">Resume</a></li>
+                    <li><a class="drop-list" style="color:#000000;" href="resume.html">Resume</a></li>
 	            <li><a style="color:#000000;" href="#articles">Recent Articles</a></li>
 		    <li><a style="color:#000000;" href="gallery.html">Gallery</a></li>
 		    <li><a style="color:#000000;" href="#">Social Media</a></li>
