--- a/index.html
+++ b/index.html
@@ -102,26 +102,9 @@
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-nav-first">
                     <li><a href="#home" class="smoothScroll"><i class="fa fa-home"></i> Home</a></li>
-		    <li class="dropdown">
-			  <a href="#about" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-user"></i> About me<span class="caret"></span></a>				
-			  <ul class="dropdown-menu" role="menu">
-                    <li><a style="color:#000000;" href="#about">Quick Bio</a></li>
-                    <li><a style="color:#000000;" href="resume.html">Resume</a></li>
-	            <li><a style="color:#000000;" href="#articles">Recent Articles</a></li>
-		    <li><a style="color:#000000;" href="gallery.html">Gallery</a></li>
-		    <li><a style="color:#000000;" href="#">Social Media</a></li>
-              </ul>                
-                    </li>
+		    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About Me</a></li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
-                    <li class="dropdown">
-			  <a href="#portfolio" class="dropdown-toggle smoothScroll" data-toggle="dropdown"><i class="fa fa-code"></i> Portfolio<span class="caret"></span></a>				
-			  <ul class="dropdown-menu" role="menu">
-                    <li><a style="color:#000000;" href="#projects">Recent Projects</a></li>
-                    <li><a style="color:#000000;" href="#testimonial">Testimonials</a></li>
-		    <li><a style="color:#000000;" href="https://github.com/bolajiayodeji">Github</a></li>
-		    <li><a style="color:#000000;" href="https://codepen.io/iambeejayayo">Codepen</a></li>
-              </ul>                
-                    </li>
+                    <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
                     <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact</a></li>
                 </ul>
 
