--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		    <li><a href="#about" class="smoothScroll"><i class="fa fa-user"></i> About Me</a></li>
                     <li><a href="#service" class="smoothScroll"><i class="fa fa-briefcase"></i> Services</a></li>
                     <li><a href="#portfolio" class="smoothScroll"><i class="fa fa-code"></i> Portfolio</a></li>
-                    <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact</a></li>
+                    <li><a href="#contact" class="smoothScroll"><i class="fa fa-address-book"></i> Contact Me</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
