--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="images/about-image.jpg">
+    <meta name="twitter:title" content="Bolaji Ayodeji - The Geek">
+    <meta name="twitter:description" content="Empowering Africa through Technology.">
+    <meta name="twitter:image" content="images/about-image.jpg">
+    <meta name="twitter:card" content="images/about-image.jpg">
+    <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <meta property="og:title" content="Bolaji Ayodeji - The Geek" />
     <meta property="og:description" content="A software developer out to build brilliant and innovative products." />
     <meta name="author" content="Bolaji Ayodeji">
     <meta property="og:url" content="https://bolajiayodeji.github.io" />
     <meta property="og:site_name" content="Bolaji Ayodeji - The Geek" />
     <meta property="og:type" content="Portfolio Website" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/magnific-popup.css" />
