--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
                 <!--COLUMN TWO-->
                 <div class="col-md-6 col-sm-12">
                     <div class="home-info">
-                        <h1><i class="fa fa-black-tie"></i>&nbsp; Bolaji Ayodeji</h1>
+                        <h1><i class="fa fa-black-tie"></i>&nbsp; <a href="" class="typewrite" data-period="2000" data-type='[ "Hello world!, I'm Bolaji Ayodeji." ]'>
+    <span class="wrap"></span>
+  </a></h1>
                         <h1><i class="fa fa-code"></i> Front-end Developer</h1> <br />
                         <a href="#about" class="btn section-btn smoothScroll">Get Started</a>
                         <span>
