--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <!--COLUMN TWO-->
                 <div class="col-md-6 col-sm-12">
                     <div class="home-info">
-                        <h1><i class="fa fa-black-tie"></i>&nbsp; <a href="" class="typewrite" data-period="2000" data-type='[ "Hello world!, I'm Bolaji Ayodeji." ]'>
+                        <h1><i class="fa fa-black-tie"></i>&nbsp; <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I'm Bolaji Ayodeji.", "I am Creative.", "I Love Design.", "I Love to Develop." ]'>
     <span class="wrap"></span>
   </a></h1>
                         <h1><i class="fa fa-code"></i> Front-end Developer</h1> <br />
