--- a/index.html
+++ b/index.html
@@ -139,9 +139,11 @@
 
                 <!--COLUMN TWO-->
                 <div class="col-md-6 col-sm-12">
-                    <div class="home-info box">
+                    <div class="home-info">
+			    <div class="box">
                         <h1><i class="fa fa-black-tie"></i>&nbsp; Bolaji Ayodeji.</h1>
 			    <div class="mask"></div>
+			    </div>
                         <h1><i class="fa fa-code"></i> Front-end Developer</h1> <br />
                         <a href="#about" class="btn section-btn smoothScroll">Get Started</a>
                         <span>
