--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                             <span class="line-bar">...</span>
                         </div>
                         <p>Hello there! I'm Bolaji Ayodeji.</p>
-                        <p>I build and deploy software applications with great focus on stunning interface design, optimization and security.</p>
+                        <p>I build and deploy softwares with great focus on stunning user interface, design, optimization and security.</p>
                         <p>I'm passionate about developing and designing brilliant innovative products.</p> <br />
                         <a class="section-btn" href="resume.html">View Complete Resume <i class="fa fa-arrow-right"></i></a>
                     </div>
@@ -196,7 +196,7 @@
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
                         </div>
 
-                        <strong>Content Writing</strong>
+                        <strong>Content Management</strong>
                         <span class="pull-right"><i class="fa fa-keyboard-o"></i> <i class="fa fa-mobile"></i></span>
                         <div class="progress">
                             <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div>
@@ -268,7 +268,7 @@
                         <div class="media-body blog-info">
                                 <img src="images/blog-image4.png" class="img-responsive" alt=""></a>
                             <h3>Bot Development</a></h3>
-                            <p>Chat Bots development for easy, fast & digital customer communication.</p>
+                            <p>Chat Bots development for easy, fast and digital customer service communication.</p>
                         </div>
                     </div>
                 </div>
@@ -278,8 +278,8 @@
                         <div class="media blog-thumb">
                             <div class="media-body blog-info">
                                     <img src="images/blog-image5.png" class="img-responsive" alt=""></a>
-                                <h3>Content Writing</a></h3>
-                                <p>Content write ups for product documentation, promotion & blogs.</p>
+                                <h3>Content Management</a></h3>
+                                <p>Content management, article write ups for product documentation, promotion and blogs.</p>
                             </div>
                         </div>
                     </div>
@@ -669,22 +669,22 @@
                             </div>
                             <ul class="social-icon">
                                 <li>
-                                    <a href="https://facebook.com/ayodeji.beejay" class="fa fa-facebook-square" attr="facebook icon"></a>
+                                    <a href="https://facebook.com/iambolajiayo" class="fa fa-facebook-square" attr="facebook icon"></a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/iambeejayayo" class="fa fa-twitter"></a>
+                                    <a href="https://twitter.com/iambolajiayo" class="fa fa-twitter"></a>
                                 </li>
                                 <li>
-                                    <a href="https://instagram.com/iambeejayayo" class="fa fa-instagram"></a>
+                                    <a href="https://instagram.com/iambolajiayo" class="fa fa-instagram"></a>
                                 </li>
                                 <li>
-                                    <a href="https://linkedin/in/iambeejayayo" class="fa fa-linkedin"></a>
+                                    <a href="https://linkedin/in/iambolajiayo" class="fa fa-linkedin"></a>
                                 </li>
                                 <li>
                                     <a href="https://github.com/bolajiayodeji" class="fa fa-github"></a>
                                 </li>
                                 <li>
-                                    <a href="https://codepen.io/iambeejayayo" class="fa fa-codepen"></a>
+                                    <a href="https://codepen.io/iambolajiayo" class="fa fa-codepen"></a>
                                 </li>
                             </ul>
                         </div>
